--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/AndroidManifest.xml
@@ -17,12 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ControlActivity"/>
+        <activity android:name=".DialogActivity"/>
         <service android:name=".BluetoothLeService" android:enabled="true"/>
     </application>
 
